--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	<AssemblyName>Client</AssemblyName>
+	<RootNamespace>Client</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
